closes #227
